# jarvis-mvp-production

./: .coverage  .env.example  .env.staging  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  JarvisMVP.bat  JarvisMVP.lnk  Makefile  Procfile  README.md  README_API.md  README_AUTH.md  RUNBOOK.md  alembic.ini  chat_history.txt  check_db.py  check_db_connection.py  check_kwork_data.py  check_kwork_db.py  check_replies.py  check_sqlite.py  check_tables.py  check_users.py  create_simple_tables.py  create_superuser.py  create_tables_one_by_one.py  create_tables_sql.py  db_schema.py  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  fix_imports.py  gunicorn_conf.py  init_db.py  init_models.py  init_tables.py  kwork_card.html  (+28 more)
.github/workflows/: ci-cd.yml  ci.yml  kwork-integration-tests.yml  snapshot-staging.yml  stress-test.yml
alembic/: env.py
ci/: .gitignore  CODE_REVIEW.md  Dockerfile.ci  README.md  __init__.py  analytics.py  auth.py  check.py  ci_config.json  cleanup_ci.py  cron_daily.sh  init_db.py  models.py  pipeline_config.py  pipeline_status.py  requirements-ci.txt  review_api.py  review_engine.py  review_storage.py  run_ci.py  run_docker_ci.sh  run_pipeline.py  setup_ci_env.sh  setup_ci_tools.py  setup_cron.py  telegram_notifier.py  telegram_notify.py  test_auth.py  visualize_pipeline.py  web_ui.py  webhook.py
ci/data/: sample_analytics.json
ci/templates/: analytics.html  base.html  login.html
config/: proxies.json
docs/: AI_Code_Inspector.md  API_DOCUMENTATION.md  AUTHENTICATION.md  STAGING_READINESS.md  WEB_UI.md  kwork_integration.md
examples/: README.md  kwork_parser_example.py
giveaway_bot/: bot.py  config.py
giveaway_bot/modules/: __init__.py
jarvis_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kwork_debug/: card_88cb4864.html  card_af679c7a.html  card_dc3e3852.html
monitoring/: README.md  alerts.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: README.md  __init__.py  check_test_order.py  check_web_ui.ps1  create_test_order.py  deploy_staging.ps1  deploy_staging_fixed.ps1  download_model.py  init_db.py  insert_test_log.py  kwork_console.py  kwork_node_bridge.js  manage_kwork.py  monitor.js  monitored_bridge.js  package-lock.json  package.json  send-telegram-alert.ps1  send_telegram_report.ps1  setup-github-secrets.ps1  setup_env.py  setup_kwork_filter.py  test_auth.py  test_kwork_api.py  test_kwork_auth.js  test_kwork_bridge.py  test_kwork_manual.js  test_llm_integration.py  test_telegram_bot.py  test_web_ui.ps1  wait_and_test.py
src/: api.py  cli.py  main.py  services.py
src/api/: __init__.py  auth.py  dependencies.py
src/automation/: auto_responder.py  yandex_maps_scraper.py
src/bot/: __init__.py  decorators.py  handlers.py  telegram_bot.py
src/core/: __init__.py  security.py
src/crud/: __init__.py  user.py
src/database/: __init__.py  crud.py  kwork_crud.py  kwork_models.py  models.py  session.py
src/integrations/: __init__.py  browser_pool.py  date_utils.py  dotenv.py  kwork.py  kwork_parser.py  kwork_price_parser.py  kwork_scraper.py  kwork_selenium.py  kwork_submission.py  pagination.py
src/kwork/: __init__.py  api.py  captcha_solver.py  cli.py  models.py  node_bridge.py  proxy_manager.py  (+3 more)
tests/: config.js  conftest.py  conftest.py.new  conftest_test.py  load_test.js  mock_kwork_api.py  mock_llm.py  run_stress_test.js  smoke_test.py  stress_test.js  test_api.py  test_auth_endpoints.py  test_auth_flow.py  test_browser_pool.py  test_cli.py  test_config.py  test_data.py  test_database.py  test_database_models.py  test_database_pool.py  test_kwork_integration.py  test_kwork_parser.py  test_kwork_scraper.py  test_kwork_scraper_cli.py  test_kwork_scraper_config.py  test_kwork_scraper_database.py  test_kwork_scraper_errors.py  test_kwork_scraper_main.py  test_kwork_scraper_pagination.py  test_kwork_scraper_telegram.py  test_logging.py  test_main.py  test_migrations.py  test_order_processing.py  test_order_processing_simple.py  test_orders.json  test_pagination.py  test_price_parser.py  test_refresh_token.py  test_telegram_report.py  (+2 more)
(+30 files in other folders)
