[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kwork-scraper"
version = "0.1.0"
description = "A high-performance async web scraper for Kwork.ru"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "loguru>=0.6.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "aiohttp>=3.8.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.3.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=23.7.10",
    "flake8-comprehensions>=3.12.0",
    "flake8-docstrings>=1.7.0",
    "types-python-dateutil>=2.8.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "typing-extensions>=4.5.0",
    "pre-commit>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/kwork-scraper"
Documentation = "https://github.com/yourusername/kwork-scraper#readme"
Issues = "https://github.com/yourusername/kwork-scraper/issues"
Source = "https://github.com/yourusername/kwork-scraper"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# Exclude migrations and other auto-generated files
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
  | venv
  | ci/logs
  | \.github
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
# Match black's exclude patterns
skip = [
    '.git',
    '.mypy_cache',
    '.pytest_cache',
    '.tox',
    '.venv',
    '_build',
    'build',
    'dist',
    'migrations',
    'venv',
    'ci/logs',
    '.github',
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["src"]
omit = ["**/__pycache__/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "raise ValueError",
    "raise TypeError",
    "raise Exception",
    "except:",
    "except Exception:",
    "except:  # noqa",
    "except Exception:  # noqa",
    "def __init__"
]
